[bug] Fix overflow issue for code inside ```markdown code blocks``` too.

--- a/frontend/src/elements/Text.css
+++ b/frontend/src/elements/Text.css
@@ -37,11 +37,11 @@
   line-height: inherit;
   margin: 0;
   max-width: auto;
-  overflow: visible;
   padding: 0;
   white-space: pre;
   word-break: normal;
   word-wrap: normal;
+  overflow-x: auto;
 }
 
 .streamlit-container .markdown-text-container blockquote {
